src/test/contracts/top_level_patterns/negative/cameligo/constr_let_in2.mligo
let test =
  let True = true in
  42
